# cascade-customizations-catalog

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  _config.yml
.github/ISSUE_TEMPLATE/: new-customization.yaml
.github/workflows/: deploy.yml
.windsurf/rules/style/: frontend-rules.md  frontend-style-reccomendations.md
bundles/backend-team/: bundle.yaml
bundles/devops-team/: bundle.yaml
bundles/frontend-team/: bundle.yaml
bundles/security-team/: bundle.yaml
customizations/rules/framework/: react.md
customizations/rules/language/: java.md  typescript.md
customizations/rules/security/: secure-coding.md
customizations/rules/style/: frontend-format.md  frontend-rules.md
customizations/workflows/maintenance/: debugging-issues.md
customizations/workflows/setup/: dev-environment-setup.md  node-project-setup.md
scripts/: README.md  update-directory-scanner.js
submission-api/: .env.example  .gitignore  README.md  pyproject.toml
submission-api/app/: main.py
submission-api/app/routes/: submission.py
web-ui/: README.md  index.html
web-ui/bundles/backend-team/: bundle.yaml
web-ui/bundles/devops-team/: bundle.yaml
web-ui/bundles/frontend-team/: bundle.yaml
web-ui/bundles/security-team/: bundle.yaml
web-ui/css/: clean-theme.css  components.css  modern-theme.css
web-ui/js/: app.js
web-ui/js/core/: BundleResolver.js  CascadeCatalog.js  DataLoader.js
web-ui/js/ui/: FilterManager.js  ModalManager.js  SubmissionFormManager.js  ViewRenderer.js
web-ui/js/utils/: ColorUtils.js  DirectoryScanner.js  FileUtils.js
(+12 files in other folders)
